--- a/.github/workflows/waka-time.yml
+++ b/.github/workflows/waka-time.yml
@@ -13,7 +13,17 @@ jobs:
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
-          SHOW_TITLE: true
-          COMMIT_BY_ME: true
-          SHOW_LINES_OF_CODE: true
+          SHOW_TITLE: "True"
+          COMMIT_BY_ME: "True"
+          SHOW_LINES_OF_CODE: "True"
+          SHOW_COMMIT: "True"
+          SHOW_DAYS_OF_WEEK: "True"
+          SHOW_LANGUAGE: "True"
+          SHOW_OS: "True"
+          SHOW_PROJECTS: "True"
+          SHOW_EDITORS: "True"
+          SHOW_LANGUAGE_PER_REPO: "True"
+          SHOW_SHORT_INFO: "True"
+          SHOW_LOC_CHART: "True"
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
